--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -31,66 +31,37 @@ jobs:
         - macos-latest
         - ubuntu-latest
         - windows-latest
-        upstream:
+        version:
         # In each group:
         # - Versions of ixmp and message_ix to test.
         # - Latest supported Python version for those or other dependencies.
-        # - Extra dependencies, in particular fixed/maximum versions to resolve conficts.
-        #   - dask[dataframe] >= 2024.3.0 requires dask-expr and in turn pandas >= 2.0.
-        #     https://github.com/iiasa/message-ix-models/pull/156#issuecomment-2020152360
-        #   - genno: upstream versions < 3.8.0 import genno.computations, removed in 1.25.0.
-        #     https://github.com/iiasa/message-ix-models/pull/156
-        #   - pytest: upstream versions < 3.9.0 use a hook argument removed in pytest 8.1.0.
-        #     https://github.com/iiasa/message-ix-models/pull/155
-        #
         # Minimum version given in pyproject.toml + earlier version of Python
-        - version: v3.4.0  # 2022-01-27
-          python-version: "3.11"
-          extra-deps: '"dask < 2024.3.0" "genno < 1.25" "pandas < 2.0" "pytest == 8.0.0"'
-          dask-dataframe: false
-        - version: v3.5.0  # 2022-05-06
-          python-version: "3.11"
-          extra-deps: '"dask < 2024.3.0" "genno < 1.25" "pandas < 2.0" "pytest == 8.0.0"'
-          dask-dataframe: false
-        - version: v3.6.0  # 2022-08-18
-          python-version: "3.11"
-          extra-deps: '"dask < 2024.3.0" "genno < 1.25" "pandas < 2.0" "pytest == 8.0.0"'
-          dask-dataframe: false
-        - version: v3.7.0  # 2023-05-17
-          python-version: "3.11"
-          extra-deps: '                  "genno < 1.25"                "pytest == 8.0.0"'
-          dask-dataframe: true
-        - version: v3.8.0  # 2024-01-12
-          python-version: "3.12"
-          extra-deps: '                                                "pytest == 8.0.0"'
-          dask-dataframe: true
+        - { upstream: v3.4.0, python: "3.11" }  # 2022-01-27
+        - { upstream: v3.5.0, python: "3.11" }  # 2022-05-06
+        - { upstream: v3.6.0, python: "3.11" }  # 2022-08-18
+        - { upstream: v3.7.0, python: "3.11" }  # 2023-05-17
+        - { upstream: v3.8.0, python: "3.12" }  # 2024-01-12
         # Latest released version + latest released Python
-        - version: v3.9.0  # 2024-06-04
-          python-version: "3.13"
-          extra-deps: ''
-          dask-dataframe: true
+        - { upstream: v3.9.0, python: "3.13" }  # 2024-06-04
         # Development version + latest released Python
-        - version: main
-          python-version: "3.13"
-          extra-deps: ''
-          dask-dataframe: true
+        - { upstream: main,   python: "3.13" }
 
         exclude:
         # Specific version combinations that are invalid / not to be used
         # These versions of ixmp are not able locate the arm64 GAMS API binaries
-        - { os: macos-latest, upstream: {version: v3.4.0 }}
-        - { os: macos-latest, upstream: {version: v3.5.0 }}
-        - { os: macos-latest, upstream: {version: v3.6.0 }}
-        - { os: macos-latest, upstream: {version: v3.7.0 }}
-        - { os: macos-latest, upstream: {version: v3.8.0 }}
-        - { os: macos-latest, upstream: {version: v3.9.0 }}
+        - { os: macos-latest, version: {upstream: v3.4.0 }}
+        - { os: macos-latest, version: {upstream: v3.5.0 }}
+        - { os: macos-latest, version: {upstream: v3.6.0 }}
+        - { os: macos-latest, version: {upstream: v3.7.0 }}
+        - { os: macos-latest, version: {upstream: v3.8.0 }}
+        - { os: macos-latest, version: {upstream: v3.9.0 }}
         # Redundant with macos-latest
-        - { os: macos-13, upstream: {version: main }}
+        - { os: macos-13, version: {upstream: main }}
 
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
-    name: ${{ matrix.os }}-py${{ matrix.upstream.python-version }}-upstream-${{ matrix.upstream.version }}
+    name: ${{ matrix.os }}-py${{ matrix.version.python }}-upstream-${{ matrix.version.upstream }}
 
     steps:
     - name: Cache test data
@@ -104,7 +75,7 @@ jobs:
 
     - uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.upstream.python-version }}
+        python-version: ${{ matrix.version.python }}
         cache: pip
         cache-dependency-path: "**/pyproject.toml"
 
@@ -117,31 +88,42 @@ jobs:
       # TEMPORARY Work around ts-graphviz/setup-graphviz#630
       if: ${{ ! startswith(matrix.os, 'macos-') }}
 
+    - name: Determine extra dependencies
+      id: extra-deps
+      run : |
+        from os import environ
+        from pathlib import Path
+
+        v, result = "${{ matrix.version.upstream }}".replace("main", "vmain"), []
+        for condition, dependency in (
+            (v <= "v3.6.0", "dask < 2024.3.0"),  # dask[dataframe] >= 2024.3.0 requires dask-expr and in turn pandas >= 2.0 (#156)
+            (v <= "v3.6.0", "pandas < 2.0"),
+            (v >= "v3.7.0", "dask[dataframe] < 2024.11.0"),  # dask >= 2024.11.0 changes handling of dict (will be addressed in #225)
+            (v <= "v3.7.0", "genno < 1.25"),  # Upstream versions < 3.8.0 import genno.computations, removed in 1.25.0 (#156)
+            (v < "v3.9.0", "pytest == 8.0.0"),  # Upstream versions < 3.9.0 use a hook argument removed in pytest 8.1.0 (#155)
+        ):
+            result.extend([f'"{dependency}"'] if condition else [])
+
+        Path(environ["GITHUB_OUTPUT"]).write_text(f"value={' '.join(result)}\n")
+      shell: python
+
     - name: Install packages and dependencies
       # By default, install:
-      # - ixmp, message_ix: from GitHub branches/tags per matrix.upstream-version (above)
+      # - ixmp, message_ix: from GitHub branches/tags per matrix.version.upstream (above)
       # - other dependencies including genno: from PyPI.
       #
       # To test against unreleased code (on `main`, or other branches
       # for open PRs), temporarily uncomment, add, or edit lines below
       # as needed. DO NOT merge such changes to `main`.
       run: |
-        # pip install --upgrade "genno @ git+https://github.com/khaeru/genno.git@main"
-        pip install --upgrade "ixmp @ git+https://github.com/iiasa/ixmp.git@${{ matrix.upstream.version }}"
-        pip install --upgrade "message-ix @ git+https://github.com/iiasa/message_ix.git@${{ matrix.upstream.version }}"
+        pip install --upgrade "ixmp @ git+https://github.com/iiasa/ixmp.git@${{ matrix.version.upstream }}"
+        pip install --upgrade "message-ix @ git+https://github.com/iiasa/message_ix.git@${{ matrix.version.upstream }}"
 
-        pip install .[docs,tests] ${{ matrix.upstream.extra-deps }}
+        pip install .[docs,tests] ${{ steps.extra-deps.outputs.value }}
 
         # TEMPORARY With Python 3.13 pyam-iamc resolves to 1.3.1, which in turn
         # limits pint < 0.17. Override.
         pip install --upgrade pint
-
-    - name: Install specific dask versions as workaround
-      if: ${{ matrix.upstream.dask-dataframe }}
-      run: |
-        # TEMPORARY Work around dask v2024.11.0;
-        # see https://github.com/khaeru/genno/issues/149
-        pip install "dask[dataframe] < 2024.11.0"
 
     - name: Configure local data path
       run: |
