Add share constraint sets and params for cooling technologies

--- a/message_ix_models/data/water/ssp.yaml
+++ b/message_ix_models/data/water/ssp.yaml
@@ -18,59 +18,46 @@ scenarios:
   SSP1:
     cooling_tech:
       globalNorth:
-        bound_activity_up: # maybe revet to share if it is the only case
-          __ot_fresh: 0
+      # constraints on for the globalNorth
+        share_commodity_up: # maybe revet to share if it is the only case
+          share_cooling_ot_fresh: 0
       globalSouth:
-        share_up:
-          __ot_fresh: 10
-          __ot_saline: "enabled"
-          __cl_fresh: "enabled"
-          __air: "enabled"
-  
+      # constraints on for the globalSouth
+        share_commodity_up:
+          share_cooling_ot_fresh: 0.1
   SSP2:
     cooling_tech:
       globalNorth:
-        share_up:
-          __ot_fresh: 30
-          __ot_saline: "enabled"
-          __cl_fresh: "enabled"
-          __air: 50
+        share_commodity_up:
+          share_cooling_ot_fresh: 0.3
+          share_cooling_air: 0.5
       globalSouth:
-        share_up:
-          __ot_fresh: 30
-          __ot_saline: "enabled"
-          __cl_fresh: "enabled"
-          __air: 50
-
+        share_commodity_up:
+          share_cooling_ot_fresh: 0.3
+          share_cooling_air: 0.5
   SSP3:
     cooling_tech:
-      all:
-        share_up:
-          __ot_fresh: 0
-          __ot_saline: "enabled"
-          __cl_fresh: "enabled"
-          __air: 30
-          
+      globalNorth:
+        share_commodity_up:
+          share_cooling_ot_fresh: 0
+          share_cooling_air: 0.3
+      globalSouth:
+        share_commodity_up:
+          share_cooling_ot_fresh: 0
+          share_cooling_air: 0.3
   SSP4:
     cooling_tech:
       globalNorth:
-        share_up:
-          __ot_fresh: 0
-          __ot_saline: "enabled"
-          __cl_fresh: "enabled"
-          __air: 30
+        share_commodity_up:
+          share_cooling_ot_fresh: 0
+          share_cooling_air: 0.3
       globalSouth:
-        share_up:
-          __ot_fresh: 30
-          __ot_saline: "enabled"
-          __cl_fresh: "enabled"
-          __air: 30
+        share_commodity_up:
+          share_cooling_ot_fresh: 0.3
+          share_cooling_air: 0.3
 # SSP5, no constraints on cooling technologies
   LED:
     cooling_tech:
       all:
-        share_up:
-          __ot_fresh: "enabled"
-          __ot_saline: "enabled"
-          __cl_fresh: "enabled"
-          __air: 10
+        share_commodity_up:
+          share_cooling_air: 0.1
